	  planned to use the SPI interface, but it is just now compatible
	  with the SAMV71 QSPI hardware (2015-08-25).
	* drivers/rwbuffer.c: Fix some logic errors.  From Dmitry Nikolaev
	  via Juha Niskanen (2015-08-26).
	* net/socket and net/tcp: Fix a problem in whent there are multiple
	  network devices.  Polls were being sent to all TCP sockets before.
	  This is not good because it means that packets may sometimes be
	  sent out on the wrong device.  That is inefficient because it
	  will cause retransmissions and bad performance.  But, worse, when
	  one of the devices is not Ethernet, it will have a different MSS
	  and, as a result, incorrect data transfers can cause crashes.
	  The fix is to lock into a single device once the MSS is locked
	  locked down (2015-08-27).
	* drivers/lcd and include/nuttx/lcd:  Add SSD1351 OLED controller
	  support.  Contributed by Paul Alexander Patience (2015-08-28).
	* include/nuttx/mtd/mtd.h:  Move MTD ioctl command definitions from
	  include/nuttx/fs/fs.h to include/nuttx/mtd.h.  Add ioctl commands
	  to protect and unprotect memory (2015-08-29).
	* binfmt/builtin.c:  Fix a memory leak: File was not being closed.
	  From Bruno Herrera (2015-08-30).
	* fs/romfs: One allocation was not being freed if there was a
	  subsequent failure to allocation I/O buffers resulting in a memory
	  leak on certain error conditions.  From Bruno Herrera (2015-08-30).
	* arch/arm/src/up_iternal.h and several ARM Make.defs files:  In the
	  original implementation, !defined(CONFIG_ARMV7M_CMNVECTOR) was a
	  sufficient test to determine if lazy floating point register saving
	  was being used.  But recents changes added common lazy register as
	  well so now that test must be (!defined(CONFIG_ARMV7M_CMNVECTOR) ||
	  defined(CONFIG_ARMV7M_LAZYFPU)) (2015-08-31).
	* arch/arm/include/sama5 and src/sama5:  Add basic chip description,
	  configuration support and interrupt definitions for the SAMA5D2
	  (2015-08-31).
