@@ -3,7 +3,7 @@
  *
  * This file is a part of NuttX:
  *
- *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2012, 2015 Gregory Nutt. All rights reserved.
  *   Ported by: Darcy Gong
  *
  * It derives from the Rhombs OS math library by Nick Johnson which has
@@ -36,13 +36,29 @@
 #include <float.h>
 
 /************************************************************************
+ * Pre-processor Definitions
+ ************************************************************************/
+
+#undef  DBL_EPSILON
+#define DBL_EPSILON 1e-12
+
+/************************************************************************
  * Public Functions
  ************************************************************************/
 
 #ifdef CONFIG_HAVE_DOUBLE
 double asin(double x)
 {
-  long double y, y_sin, y_cos;
+  long double y;
+  long double y_sin;
+  long double y_cos;
+
+  /* Verify that the input value is in the domain of the function */
+
+  if (x < -1.0 || x > 1.0)
+    {
+      return NAN;
+    }
 
   y = 0;
 
